# ncnnrs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/get_version/: Cargo.toml
examples/shufflenet/: Cargo.toml
examples/shufflenet/src/: main.rs
src/: allocator.rs  datareader.rs  mat.rs
