[package]
name = "ncnnrs"
version = "0.1.7"
edition = "2024"
authors = ["baiyue"]
description = " Rust implementation of ncnn, a lightweight neural network inference framework, with separated static library for cross-platform compilation."
repository = "https://github.com/Baiyuetribe/ncnnrs"
license = "MIT"
keywords = ["ncnn", "ncnn_rust", "rust_ncnn", "ncnnrs"]
categories = ["api-bindings", "development-tools"]
exclude = ["demo/*"]


[dependencies]
anyhow = "1.0.98"
encoding_rs = "0.8.35"
libc = "0.2.172"

[build-dependencies]
bindgen = "0.72.0"

[lints.rust]
warnings = "allow" # deny, warn, allow, or forbid

[features]
cpu = [] # 默认启用vulkan，开启此特质将仅使用cpu
